--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ p {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
 }
 
