--- a/css/style.scss
+++ b/css/style.scss
@@ -39,7 +39,7 @@ p {
     font-family: 'Gilroy';
 }
 body {
-    overflow-x: hidden;
+    overflow: hidden;
     background: linear-gradient(222.26deg, #3B1D60 1.22%, #040D3E 106.28%);
 }
 .container {
